@@ -1,0 +1,21 @@
+#
+# This file is part of pysnmpcrypto software.
+#
+# Copyright (c) 2018, Ilya Etingof <etingof@gmail.com>
+# License: http://snmplabs.com/pysnmp/license.html
+#
+try:
+    import unittest2 as unittest
+
+except ImportError:
+    import unittest
+
+suite = unittest.TestLoader().loadTestsFromNames(
+    ['tests.test_aes.suite',
+     'tests.test_des.suite',
+     'tests.test_des3.suite']
+)
+
+
+if __name__ == '__main__':
+    unittest.TextTestRunner(verbosity=2).run(suite)
